--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "bootswatch": "^5.3.3",
     "express": "^4.18.2",
     "ng-gallery": "^10.0.0",
+    "ng2-file-upload": "^6.0.0",
     "ngx-bootstrap": "^12.0.0",
+    "ngx-spinner": "^17.0.0",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
