Pagination, Filtering, Ordering

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.7",
-    "@angular/cdk": "^17.3.0",
+    "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.3.7",
     "@angular/compiler": "^17.3.7",
     "@angular/core": "^17.3.7",
@@ -25,11 +25,13 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "bootstrap": "^5.3.3",
     "bootswatch": "^5.3.3",
+    "date-fns": "^4.1.0",
     "express": "^4.18.2",
     "ng-gallery": "^10.0.0",
     "ng2-file-upload": "^6.0.0",
     "ngx-bootstrap": "^12.0.0",
     "ngx-spinner": "^17.0.0",
+    "ngx-timeago": "^3.0.0",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
