--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,9 @@
               "node_modules/ngx-spinner/animations/line-scale-party.css",
               "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
