--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^17.3.7",
     "@angular/ssr": "^17.3.6",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@microsoft/signalr": "^8.0.7",
     "bootstrap": "^5.3.3",
     "bootswatch": "^5.3.3",
     "date-fns": "^4.1.0",
